[package]
name = "proc"
edition.workspace    =  true
keywords.workspace   =  true
license.workspace    =  true
homepage.workspace   =  true
repository.workspace =  true
version.workspace    =  true
authors.workspace    =  true
publish              = false

[lib]
proc-macro = true

[dependencies]
syn          = "2.0.39"
quote        =    "1.0"
proc-macro2  = "1.0.70"
synstructure = "0.13.0"
